src/test/ui/issues/issue-21160.stderr
error[E0277]: the trait bound `Bar: Hash` is not satisfied
  --> $DIR/issue-21160.rs:8:12
   |
LL | struct Foo(Bar);
   |            ^^^ the trait `Hash` is not implemented for `Bar`
   | 
  ::: $SRC_DIR/core/src/hash/mod.rs:LL:COL
   |
LL |     fn hash<H: Hasher>(&self, state: &mut H);
   |             - required by this bound in `std::hash::Hash::hash`
   |
   = note: this error originates in the derive macro `Hash` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
